# tinyurl

./: pyproject.toml
tinyurl/: main.py
